@@ -47,7 +47,7 @@ class ConfirmDialog : public Window, public gcn::ActionListener {
         /**
          * Called when receiving actions from the widgets.
          */
-        void action(const std::string& eventId, gcn::Widget* widget);
+        void action(const std::string &eventId, gcn::Widget *widget);
 };
 
 #endif
