@@ -51,10 +51,11 @@ OkDialog::OkDialog(const std::string &title, const std::string &msg,
     add(okButton);
 
     setLocationRelativeTo(getParent());
+    setVisible(true);
     okButton->requestFocus();
 }
 
-void OkDialog::action(const std::string& eventId, gcn::Widget* widget)
+void OkDialog::action(const std::string &eventId, gcn::Widget *widget)
 {
     // Proxy button events to our listeners
     ActionListenerIterator i;
