@@ -46,7 +46,7 @@ class OkDialog : public Window, public gcn::ActionListener {
         /**
          * Called when receiving actions from the widgets.
          */
-        void action(const std::string& eventId, gcn::Widget* widget);
+        void action(const std::string &eventId, gcn::Widget *widget);
 };
 
 #endif
